Fix particle resolver and add arc/ring subcommands